Build compatibility fixes: downgrade to Java 17 and JavaFX 17
Co-authored-by: antipro <2208595+antipro@users.noreply.github.com>