@@ -172,7 +172,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
         forwardBiasProperty().addListener(observable -> {
             if (control.getWidth() > 0) {
-                Text textNode = (Text)((TextFlow) paragraphNodes.getChildren().getFirst()).getChildren().getFirst();
+                Text textNode = (Text)((TextFlow) paragraphNodes.getChildren().get(0)).getChildren().get(0);
                 updateTextNodeCaretPos(control.getCaretPosition(), textNode);
             }
         });
@@ -399,13 +399,13 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
             });
 //            registerInvalidationListener(control.textProperty(), e -> {
 //                invalidateMetrics();
-////                ((Text)paragraphNodes.getChildren().getFirst()).setText(control.textProperty().getValueSafe());
+////                ((Text)paragraphNodes.getChildren().get(0)).setText(control.textProperty().getValueSafe());
 //                contentView.requestLayout();
 //            });
         } else {
             registerInvalidationListener(control.textProperty(), e -> {
                 invalidateMetrics();
-                ((Text)paragraphNodes.getChildren().getFirst()).setText(control.textProperty().getValueSafe());
+                ((Text)paragraphNodes.getChildren().get(0)).setText(control.textProperty().getValueSafe());
                 contentView.requestLayout();
             });
         }
@@ -1192,8 +1192,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
     /** {@inheritDoc} */
     @Override public double computeBaselineOffset(double topInset, double rightInset, double bottomInset, double leftInset) {
-        TextFlow firstFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
-        Text firstParagraph = (Text) firstFlow.getChildren().getFirst();
+        TextFlow firstFlow = (TextFlow) paragraphNodes.getChildren().get(0);
+        Text firstParagraph = (Text) firstFlow.getChildren().get(0);
         return Utils.getAscent(getSkinnable().getFont(), firstParagraph.getBoundsType())
                 + contentView.snappedTopInset() + codeArea.snappedTopInset();
     }
@@ -1243,7 +1243,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
         if (n > 0) {
             if (y < contentView.snappedTopInset()) {
                 // Select the character at x in the first row
-//                Text paragraphNode = (Text)paragraphNodes.getChildren().getFirst();
+//                Text paragraphNode = (Text)paragraphNodes.getChildren().get(0);
                 Text paragraphNode = getTextNode(x, y);
                 index = getNextInsertionPoint(paragraphNode, x, -1, VerticalDirection.DOWN);
             } else if (y > contentView.snappedTopInset() + contentView.getHeight()) {
@@ -1405,7 +1405,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
     private void createPromptNode() {
         if (promptNode == null && usePromptText.get()) {
             promptNode = new Text();
-            contentView.getChildren().addFirst(promptNode);
+            contentView.getChildren().add(0, promptNode);
             promptNode.setManaged(false);
             promptNode.getStyleClass().add("text");
             promptNode.visibleProperty().bind(usePromptText);
@@ -1546,8 +1546,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
     }
 
     private void updateFontMetrics() {
-        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
-        Text firstParagraph = (Text)textFlow.getChildren().getFirst();
+        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().get(0);
+        Text firstParagraph = (Text)textFlow.getChildren().get(0);
         lineHeight = Utils.getLineHeight(getSkinnable().getFont(), firstParagraph.getBoundsType());
         characterWidth = fontMetrics.get().getCharWidth('W');
     }
@@ -1587,8 +1587,8 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 }
             }
         }
-        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().getFirst();
-        return (Text)textFlow.getChildren().getFirst();
+        TextFlow textFlow = (TextFlow) paragraphNodes.getChildren().get(0);
+        return (Text)textFlow.getChildren().get(0);
     }
 
     /**
@@ -1685,7 +1685,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
                 for (Node node : paragraphNodes.getChildren()) {
                     TextFlow textFlow = (TextFlow)node;
-                    Text paragraphNode = (Text)textFlow.getChildren().getFirst();
+                    Text paragraphNode = (Text)textFlow.getChildren().get(0);
                     String text = textFlow.getChildren().stream()
                             .map(n -> ((Text)n).getText())
                             .collect(Collectors.joining());
@@ -1730,7 +1730,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 //                            wrappingWidth,
 //                            paragraphNode.getBoundsType());
                     TextFlow textFlow = (TextFlow)node;
-                    Text paragraphNode = (Text)textFlow.getChildren().getFirst();
+                    Text paragraphNode = (Text)textFlow.getChildren().get(0);
                     String text = textFlow.getChildren().stream()
                             .map(n -> ((Text)n).getText())
                             .collect(Collectors.joining());
@@ -1860,7 +1860,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 // Clear the extra line numbers
                 gutter.getChildren().remove(no, gutter.getChildren().size());
             }
-            double noBarWith = ((Label) gutter.getChildren().getLast()).getWidth();
+            double noBarWith = ((Label) gutter.getChildren().get(gutter.getChildren().size()-1)).getWidth();
             if (noBarWith < minBarWidth) {
                 noBarWith = minBarWidth;
             }
@@ -1937,10 +1937,10 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 // Position caret
                 int paragraphIndex = paragraphNodesChildren.size();
 
-                TextFlow caretTextFlow = (TextFlow) paragraphNodesChildren.getFirst();
+                TextFlow caretTextFlow = (TextFlow) paragraphNodesChildren.get(0);
                 Text caretTextNode = (Text) caretTextFlow
                         .getChildren()
-                        .getFirst();
+                        .get(0);
                 int caretOffset = codeArea.getLength() + 1;
                 boolean foundCaretNode = false;
 
@@ -1969,13 +1969,13 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                     if (!foundCaretNode && caretPos >= textOffset) {
                         foundCaretNode = true;
                         caretTextFlow = textFlow;
-                        caretTextNode = (Text) textFlow.getChildren().getFirst();
+                        caretTextNode = (Text) textFlow.getChildren().get(0);
                         caretOffset = textOffset;
                     }
                     if (!codeArea.getErrorPosList().isEmpty()
                             && errorPosIndex > 0
                             && codeArea.getErrorPosList().get(errorPosIndex - 1) >= textOffset) {
-                        Text textNode = (Text) textFlow.getChildren().getFirst();
+                        Text textNode = (Text) textFlow.getChildren().get(0);
                         Integer errorPos = codeArea.getErrorPosList().get(--errorPosIndex);
                         updateErrorLine(textNode, errorPos, textOffset, textFlow);
                     }
@@ -2105,10 +2105,10 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
 
                             if (linePath != null && textNode.getLayoutX() == 0) {
                                 // New Line of Selection Draw previous linePath
-                                PathElement[] firstShape = pathElements.getFirst();
+                                PathElement[] firstShape = pathElements.get(0);
                                 // MoveTo left top corner of fist shape
                                 linePath.getElements().add(firstShape[0]);
-                                PathElement[] lastShape = pathElements.getLast();
+                                PathElement[] lastShape = pathElements.get(pathElements.size()-1);
                                 // LineTo right top corner of last shape
                                 LineTo lineTo = new LineTo(highlightWidth, ((LineTo)lastShape[1]).getY());
                                 linePath.getElements().add(lineTo);
@@ -2137,7 +2137,7 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                                 if (textNode.getBoundsInLocal().getWidth() < Utils.computeTextWidth(
                                         textNode.getFont(), textNode.getText(), 0)) {
                                     // There is a text node which have whole width of editor
-                                    linePath.getElements().addAll(pathElements.getFirst());
+                                    linePath.getElements().addAll(pathElements.get(0));
                                     selectionHighlightGroup.getChildren().add(linePath);
                                     pathElements.clear();
                                     linePath = null; // Reset for next line
@@ -2172,10 +2172,10 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                 }
                 if (!pathElements.isEmpty()) {
                     // There is still some selection shape left in pathElements, Draw it
-                    PathElement[] firstShape = pathElements.getFirst();
+                    PathElement[] firstShape = pathElements.get(0);
                     // MoveTo left top corner of fist shape
                     linePath.getElements().add(firstShape[0]);
-                    PathElement[] lastShape = pathElements.getLast();
+                    PathElement[] lastShape = pathElements.get(pathElements.size()-1);
                     // LineTo right top corner of last shape
                     LineTo lineTo = new LineTo(highlightWidth, ((LineTo)lastShape[1]).getY());
                     linePath.getElements().add(lineTo);
@@ -2278,16 +2278,14 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                         int localEnd = highlightEnd - nodeStart;
                         PathElement[] pathElements = text.rangeShape(localStart, localEnd);
                         for (PathElement pathElement : pathElements) {
-                            switch (pathElement) {
-                                case MoveTo moveTo -> {
-                                    moveTo.setX(moveTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
-                                    moveTo.setY(moveTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
-                                }
-                                case LineTo lineTo -> {
-                                    lineTo.setX(lineTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
-                                    lineTo.setY(lineTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
-                                }
-                                default -> { }
+                            if (pathElement instanceof MoveTo) {
+                                MoveTo moveTo = (MoveTo) pathElement;
+                                moveTo.setX(moveTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
+                                moveTo.setY(moveTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
+                            } else if (pathElement instanceof LineTo) {
+                                LineTo lineTo = (LineTo) pathElement;
+                                lineTo.setX(lineTo.getX() + text.getLayoutX() + textFlow.getLayoutX());
+                                lineTo.setY(lineTo.getY() + text.getLayoutY() + textFlow.getLayoutY());
                             }
                         }
                         rangeHighlightPath.getElements().addAll(pathElements);
@@ -2328,16 +2326,14 @@ public class CodeAreaSkin extends CodeInputControlSkin<CodeArea> {
                     PathElement[] pathElements = textNode.rangeShape(start, end);
                     TextFlow textFlow = (TextFlow) textNode.getParent();
                     for (PathElement pathElement : pathElements) {
-                        switch (pathElement) {
-                            case MoveTo moveTo -> {
-                                moveTo.setX(moveTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
-                                moveTo.setY(moveTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
-                            }
-                            case LineTo lineTo -> {
-                                lineTo.setX(lineTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
-                                lineTo.setY(lineTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
-                            }
-                            default -> { }
+                        if (pathElement instanceof MoveTo) {
+                            MoveTo moveTo = (MoveTo) pathElement;
+                            moveTo.setX(moveTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
+                            moveTo.setY(moveTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
+                        } else if (pathElement instanceof LineTo) {
+                            LineTo lineTo = (LineTo) pathElement;
+                            lineTo.setX(lineTo.getX() + textNode.getLayoutX() + textFlow.getLayoutX());
+                            lineTo.setY(lineTo.getY() + textNode.getLayoutY() + textFlow.getLayoutY());
                         }
                     }
                     wordPath.getElements().addAll(pathElements);
